--- a/001.HTML/000.T_Pj/4.uni/main.css
+++ b/001.HTML/000.T_Pj/4.uni/main.css
@@ -41,25 +41,25 @@ img{
     box-sizing: border-box;
 }
 
-.cont a {
-    text-decoration: none; /* 밑줄 제거 */
-    position: relative; /* 부모 기준으로 하위 요소의 위치 설정 */
+.cont2box a {
+    text-decoration: none;
+    position: relative;
 }
 
-.cont a::after {
-    content: ''; /* 가상 요소 생성 */
+.cont2box a::after {
+    content: '';
     position: absolute;
     left: 0;
     bottom: -2px;
     width: 100%;
     height: 2px;
-    background-color: #03a6ff; /* 밑줄 색상 설정 */
-    transform: scaleX(0); /* 초기에는 안 보이게 설정 */
-    transition: transform 0.4s ease; /* 밑줄 나타내기 효과 */
+    background-color: #03a6ff;
+    transform: scaleX(0);
+    transition: transform 0.4s ease;
 }
 
-.cont a:hover::after {
-    transform: scaleX(1); /* 호버 시 밑줄 나타내기 */
+.cont2box a:hover::after {
+    transform: scaleX(1);
 }
 
 /* ---------------------------------------header--------------------------------------- */
