--- a/001.HTML/000.T_Pj/4.uni/main.css
+++ b/001.HTML/000.T_Pj/4.uni/main.css
@@ -41,27 +41,6 @@ img{
     box-sizing: border-box;
 }
 
-.cont2box a {
-    text-decoration: none;
-    position: relative;
-}
-
-.cont2box a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    width: 100%;
-    height: 2px;
-    background-color: #03a6ff;
-    transform: scaleX(0);
-    transition: transform 0.4s ease;
-}
-
-.cont2box a:hover::after {
-    transform: scaleX(1);
-}
-
 /* ---------------------------------------header--------------------------------------- */
 .header{
     min-height: 100px;
@@ -353,6 +332,28 @@ p.scndP {
 .cont2box ul li:nth-child(4):hover{
     background: url(img/cont2bg2.jpg) no-repeat 100% 100%/cover;
 }
+
+.cont2box a {
+    text-decoration: none;
+    position: relative;
+}
+
+.cont2box a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background-color: #03a6ff;
+    transform: scaleX(0);
+    transition: transform 0.4s ease;
+}
+
+.cont2box li:hover a::after {
+    transform: scaleX(1);
+}
+
 /* ---------------------------------------cont3--------------------------------------- */
 .cont3{
     position: relative;
